# nutrition-plan

./: .gitignore  DEPLOY.md  Makefile  README.md  RUNBOOK.md  docker-compose.yml  ВКР_разделы_v2.md  Журнал_решении_.md  ИСТОЧНИКИ_ОБОСНОВАНИЯ.md  КОНТРАКТ_API.md  ОТКРЫТЫЕ_ВОПРОСЫ.txt  ПРОМТ_старт_разработки.md  СХЕМА_БД.md  ТРЕКЕР_задач.md  ФРОНТЕНД.md  ФУНКЦИОНАЛ.md
core/: .dockerignore  Dockerfile  Makefile  README.md  go.mod  go.sum
core/db/: README.md
loader/: README.md  pyproject.toml
loader/data/smoke/: README.md  energy_norms.csv  micronutrient_norms.csv  micronutrients.csv  product_micronutrients.csv  products.csv  recipe_allergens.csv  recipe_diet_compat.csv  recipe_ingredients.csv  recipes.csv
loader/data/templates/: README.md  energy_norms.csv  micronutrient_norms.csv  micronutrients.csv  product_micronutrients.csv  products.csv  recipe_allergens.csv  recipe_diet_compat.csv  recipe_ingredients.csv  recipes.csv
loader/loader/: __init__.py  cli.py
loader/loader/sources/: norms.py  products.py  recipes.py
loader/loader_pkg/: cli.py  db.py
price-service/: .env.example  .gitignore  README.md  go.mod  go.sum
price-service/data/: sample_request.json
price-service/docs/: backend-integration-guide.md  backend-response-format.md
web/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web/e2e/: auth.spec.ts  manual-targets.spec.ts  plan.spec.ts  replace.spec.ts  shopping.spec.ts
web/src/: App.tsx  index.css  (+1 more)
Документация_ВКР/: 00_СОДЕРЖАНИЕ.md
(+134 files in other folders)
